<resources>
    <string name="app_name">Presentza</string>
    <string name="select_role">Select Role</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="parent">Parent</string>
    <string name="register_account">Register Account</string>
    <string name="already">Already have an account ? Login</string>
    <string name="show_password">Show password</string>
    <string name="google">Google</string>
    <string name="or">OR</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="e_mail">E-mail</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="unique_id">Unique ID</string>
    <string name="password">Password</string>
    <string name="symbol">symbol</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="hello_there_login_to_continue">Hello there, login to continue</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="login_with_google">Login with Google</string>
    <string name="not_registered_yet_create_an_account">Not Registered yet? Create an Account</string>
    <string name="hello_username">Hello, username</string>
    <string name="sem_5_computer_science_and_engineering">Sem 5, Computer science and engineering</string>
    <string name="sem_5_computer_science_engineering">Sem 5 ,Computer Science Engineering</string>
    <string name="notification">notification</string>
    <string name="profile_picture">profile_picture</string>
    <string name="lecture_1">Lecture 1</string>
    <string name="add_lecture">Add lecture</string>
    <string name="type_lecture_name_and_generate_otp">Type Lecture name and Generate OTP</string>
    <string name="lecture_name">Lecture name</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="otpdigit1">otpdigit1</string>
    <string name="otp">*</string>
    <string name="submit">submit</string>
    <string name="enter_the_otp_provided_by_the_teacher">Enter the OTP provided by the teacher</string>
    <string name="Enter_otp">Enter OTP</string>
    <string name="view_attendance">View Attendance</string>
    <string name="this_will_be_upadted_later">This will be upadted later</string>
</resources>