<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#F2F2F2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/notification_icon" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/profile_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile" />

    <TextView
        android:id="@+id/Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/encodesansexpanded_back"
        android:text="@string/hello_username"
        android:textColor="#010101"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/imageView2"
        app:layout_constraintEnd_toStartOf="@id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/imageView2"
        app:layout_constraintTop_toTopOf="@id/imageView2"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="VisualLintOverlap" />

    <TextView
        android:id="@+id/user_detials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:text="@string/sem_5_computer_science_engineering"
        android:textColor="#546E7A"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@id/imageView"
        app:layout_constraintStart_toEndOf="@id/imageView2"
        app:layout_constraintTop_toBottomOf="@id/Username"
        tools:ignore="VisualLintOverlap" />

    <com.harrywhewell.scrolldatepicker.DayScrollDatePicker
        android:id="@+id/dayScrollDatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:baseColor="@color/white"
        app:baseTextColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/user_detials"
        app:selectedColor="@color/colorAccent"
        app:selectedTextColor="@color/black"
        app:showFullDate="false"
        app:showTitle="true"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lectureRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/dayScrollDatePicker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
