<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    app:cardElevation="10dp"
    android:background="@drawable/card"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/encodesansexpanded_back"
            android:text="@string/add_lecture"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.079">

        </TextView>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_lecture_name_and_generate_otp"
            android:textColor="#546E7A"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:autofillHints="lecture name"
            android:background="@drawable/lecturename"
            android:hint="@string/lecture_name"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textColorHint="#546E7A"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/generateotp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/generate_otp"
            android:textColor="#546E7A"
            app:layout_constraintEnd_toEndOf="@+id/editText"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/editText"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="4"
            app:layout_constraintTop_toBottomOf="@id/editText"
            tools:layout_editor_absoluteX="0dp">

            <EditText
                android:id="@+id/otpet1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:autofillHints="OTP"
                android:background="@drawable/otp"
                android:gravity="center"
                android:hint="@string/otp"
                android:inputType="number"
                android:maxLength="1"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/editText"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="@+id/editText"
                app:layout_constraintTop_toBottomOf="@+id/editText"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <EditText
                android:id="@+id/otpet2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:autofillHints="OTP"
                android:background="@drawable/otp"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:hint="@string/otp"
                android:textColorHint="@color/black"
                android:maxLines="1"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/editText"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="@+id/editText"
                app:layout_constraintTop_toBottomOf="@+id/editText" />

            <EditText
                android:id="@+id/otpet3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:autofillHints="OTP"
                android:background="@drawable/otp"
                android:gravity="center"
                android:inputType="number"
                android:hint="@string/otp"
                android:textColorHint="@color/black"
                android:maxLength="1"
                android:maxLines="1"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/editText"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="@+id/editText"
                app:layout_constraintTop_toBottomOf="@+id/editText" />

            <EditText
                android:id="@+id/otpet4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:autofillHints="OTP"
                android:background="@drawable/otp"
                android:hint="@string/otp"
                android:textColorHint="@color/black"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:maxLines="1"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/editText"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="@+id/editText"
                app:layout_constraintTop_toBottomOf="@+id/editText" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/button"
            android:fontFamily="@font/encodesansexpanded_back"
            android:text="@string/add"
            app:layout_constraintEnd_toStartOf="@+id/cancelbutton"
            app:layout_constraintHorizontal_bias="0.875"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancelbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="48dp"
            android:background="@drawable/button"
            android:fontFamily="@font/encodesansexpanded_back"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
