<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FFFFFFFF"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#FFF5F5F5"
        android:clipChildren="false"
        android:clipToPadding="false">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="192dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/drawable_image_1"
                        android:paddingTop="18dp"
                        android:paddingBottom="83dp"
                        android:clipChildren="false"
                        android:clipToPadding="false"
                        android:orientation="vertical">


                        <TextView

                            android:textColor="#000000"
                            android:textSize="30sp"
                            android:layout_marginBottom="19dp"
                            android:layout_marginHorizontal="40dp"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/welcome_back"/>

                        <TextView

                            android:textColor="#595959"
                            android:textSize="14sp"
                            android:layout_marginBottom="38dp"
                            android:layout_marginHorizontal="41dp"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/hello_there_login_to_continue"/>
                        <LinearLayout

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="34dp"
                            android:layout_marginBottom="11dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:baselineAligned="false">

                            <LinearLayout
                                android:id="@+id/UniqueID_layoutlayout"
                                android:layout_width="17dp"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="37dp"
                                android:orientation="vertical">

                                <ImageView
                                    android:id="@+id/Uniqueid_symbol"
                                    android:layout_width="wrap_content"
                                    android:layout_height="24dp"
                                    android:scaleType="fitXY"
                                    android:src="@drawable/mail_icon"
                                    android:contentDescription="@string/symbol" />

                            </LinearLayout>

                            <EditText
                                android:id="@+id/Unique_ID"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:alpha="0.7"
                                android:autofillHints="E-mail"
                                android:textColorHint="@color/black"
                                android:hint="@string/e_mail"
                                android:inputType="text"
                                android:textColor="#020202"
                                android:textSize="18sp"
                                tools:ignore="TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/First_name_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="34dp"
                            android:layout_marginBottom="11dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:id="@+id/user_fill_layout"
                                android:layout_width="17dp"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="37dp"
                                android:orientation="vertical">

                                <ImageView
                                    android:id="@+id/user_fill"
                                    android:layout_width="wrap_content"
                                    android:layout_height="24dp"
                                    android:scaleType="fitXY"
                                    android:src="@drawable/password"
                                    android:contentDescription="@string/symbol" />

                            </LinearLayout>

                            <EditText
                                android:id="@+id/First_Name"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:alpha="0.8"
                                android:autofillHints="Password"
                                android:textColorHint="@color/black"
                                android:hint="@string/password"
                                android:inputType="text"
                                android:textColor="#020202"
                                android:textSize="18sp"
                                tools:ignore="TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/forgot_password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="16dp"
                            android:textColor="@color/black"
                            android:layout_marginBottom="53dp"
                            android:text="@string/forgot_password"
                            android:textSize="13sp"
                            tools:ignore="TextContrastCheck" />
                        <LinearLayout
                            android:id="@+id/login_student"
                            android:layout_width="319dp"
                            android:layout_height="49dp"
                            android:background="@drawable/drawable_shape_1"
                            android:paddingTop="19dp"
                            android:paddingBottom="2dp"
                            android:paddingHorizontal="137dp"
                            android:layout_marginBottom="34dp"
                            android:layout_marginHorizontal="24dp"
                            android:elevation="4dp"
                            android:orientation="vertical">
                            <TextView
                                android:id="@+id/login"
                                android:textColor="#F5F5F5"
                                android:textSize="14sp"
                                android:layout_height="0dp"
                                android:layout_width="match_parent"
                                android:layout_weight="1"
                                android:text="@string/login"/>

                        </LinearLayout>
                        <LinearLayout

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:layout_marginBottom="23dp"
                            android:layout_marginHorizontal="25dp"
                            android:orientation="horizontal">
                            <LinearLayout

                                android:layout_width="139dp"
                                android:layout_height="1dp"
                                android:background="#FFB5B5B5"
                                android:orientation="vertical">
                            </LinearLayout>
                            <View
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                />

                            <TextView
                                android:id="@+id/rq259p8s4d"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/or"
                                android:textColor="#000000"
                                android:textSize="12sp"

                                tools:ignore="TextContrastCheck" />

                            <View
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                />

                            <LinearLayout
                                android:layout_width="139dp"
                                android:layout_height="1dp"
                                android:background="#FFB5B5B5"
                                android:orientation="vertical">
                            </LinearLayout>
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/google_login"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:background="@drawable/drawable_shape_2"
                            android:paddingVertical="14dp"
                            android:paddingHorizontal="33dp"
                            android:layout_marginBottom="103dp"
                            android:layout_marginHorizontal="32dp"
                            android:elevation="10dp"
                            android:clipChildren="false"
                            android:clipToPadding="false"
                            android:orientation="horizontal">

                            <RelativeLayout
                                android:clipChildren="false"
                                android:clipToPadding="false"
                                android:layout_width="22dp"
                                android:layout_height="21dp"
                                android:layout_marginEnd="53dp">

                                <ImageView

                                    android:layout_width="22dp"
                                    android:layout_height="21dp"
                                    android:src="@drawable/google"
                                    android:scaleType="fitXY"
                                    android:contentDescription="@string/google" />


                            </RelativeLayout>
                            <TextView

                                android:textColor="#000000"
                                android:textSize="14sp"
                                android:layout_height="wrap_content"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:text="@string/login_with_google"/>

                        </LinearLayout>


                        <TextView
                            android:id="@+id/register"
                            android:textSize="13sp"
                            android:layout_marginHorizontal="66dp"
                            android:textColor="@color/black"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/not_registered_yet_create_an_account"/>

                    </LinearLayout>
                </LinearLayout>
                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="-200dp"
                    android:layout_marginStart="-10dp"
                    android:src="@mipmap/ic_launcher"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/symbol" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>




